# fastmatcher

./: .gitignore  Cargo.toml  README.md  build_and_test_whl.py  detect_and_fix.sh  pyproject.toml  requirements.txt  scan_test.py  simple_test.py  test.py
src/: lib.rs
web/: main.py
web/templates/: index.html  results.html
